new changes to the pipeline

--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -13,23 +13,44 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # Step 1: Checkout code
     - name: Checkout code
       uses: actions/checkout@v2
 
+    # Step 2: Set up Python
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
 
+    # Step 3: Create and activate virtual environment
+    - name: Create virtual environment
+      run: |
+        python -m venv venv
+        source venv/bin/activate
+        python -m pip install --upgrade pip
+
+    # Step 4: Install dependencies
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        source venv/bin/activate
         pip install -r backend/requirements.txt
 
+    # Step 5: Generate .env file dynamically
+    - name: Generate .env file
+      run: |
+        echo "SECRET_KEY=$(openssl rand -base64 32)" > backend/API/.env
+      env:
+        PATH: ${{ runner.path }}
+
+    # Step 6: Verify dependencies
     - name: Verify dependencies
       run: |
+        source venv/bin/activate
         pip list
 
+    # Step 7: Run tests
     - name: Run tests
       run: |
+        source venv/bin/activate
         python -m unittest discover -s backend/API/test -p "*.py"
